# joint-ssmt

./: .gitignore  README.md  pyproject.toml
configs/: inference_default.yaml  inference_trials.yaml  spectral_default.yaml  spectral_trials.yaml
examples/: auto_inference_demo.ipynb  quickstart_single_trial.ipynb  quickstart_trials.ipynb  tutorial_notebook.ipynb
examples/data/: demo_dataset.npz
joint_ssmt/: __init__.py  auto.py  beta_sampler_trials_jax.py  cli.py  config.py  demo.py  em_ct_hier_jax.py  em_ct_single_jax.py  joint_inference_core.py  joint_inference_core_trial_fast.py  ou.py  polyagamma_jax.py  run_joint_inference_single_trial.py  run_joint_inference_trials.py  simulate_single_trial.py  upsample_ct_hier_fine.py  upsample_ct_single_fine_jax.py  utils_common.py  utils_joint.py
joint_ssmt/analysis/: __init__.py
joint_ssmt/io/: __init__.py  runner.py  runner_trials.py
joint_ssmt/plotting/: __init__.py  beta_posterior.py  coupling_stats.py  heatmaps.py  scatter_metrics.py  spectral_dynamics.py  spectral_dynamics_trials.py  summary.py
manuscript_figures/single_trial/: compute_traditional_methods_single.py  panel_schematic.py  plot_heatmap.py  plot_methods_figure.py  plot_posterior_spike_probability.py  plot_sampling.py  run_analysis.py  run_methods_figure_pipeline.sh
manuscript_figures/single_trial/final_figure_data/results/: metadata.json
manuscript_figures/trial_structure/: compute_traditional_methods.py  plot_trial_manuscript_figures.py  run_analysis_trials.py  run_sim_figures.sh  simulate_trial_data.py
manuscript_figures/trial_structure/results/: metadata.json
tests/: conftest.py  test_imports.py  test_simulate.py  test_single_trial.py  test_trials.py
