[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joint-ssmt"
version = "0.1.0"
description = "Joint SSMT: Bayesian state-space model for joint inference of oscillatory dynamics and point-process coupling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bowen Zheng"},
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    # JAX: Linux gets the CUDA 12 build (falls back to CPU at runtime if no GPU).
    # macOS and Windows get plain jax + CPU jaxlib — there is no CUDA jaxlib for those platforms.
    "jax[cuda12]>=0.4; sys_platform == 'linux'",
    "jax>=0.4; sys_platform != 'linux'",
    "jaxlib>=0.4; sys_platform != 'linux'",
    "numba>=0.57",
    "mne>=1.4",
    "tqdm>=4.60",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml>=6.0",
    "ipywidgets>=8.0",
]

[project.scripts]
joint-ssmt = "joint_ssmt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["joint_ssmt"]

[tool.hatch.build.targets.wheel.force-include]
"joint_ssmt/data/demo_dataset.npz" = "joint_ssmt/data/demo_dataset.npz"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
